feat: complete news archive, add SEO and update contact emails

--- a/public/locales/be.json
+++ b/public/locales/be.json
@@ -139,10 +139,13 @@
   "news": {
     "title": "Апошнія падзеі",
     "all_news_btn": "Усе навіны",
-    "read_more": "Чытаць цалкам",
-    "news-full": "Навіны (архіў)"
+    "read_more": "Чытаць цалкам"
   },
-
+  "news-full": {
+    "label": "Навіны (архіў)",
+    "loading": "Загрузка...",
+    "error_load": "Не атрымалася загрузіць навіны."
+  },
   "common": {
     "slogan": "Ваша надзейная абарона"
   },
