--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -136,8 +136,12 @@
   "news": {
     "title": "Последние события",
     "all_news_btn": "Все новости",
-    "read_more": "Читать полностью",
-    "news-full": "Новости (Архив)"
+    "read_more": "Читать полностью"
+  },
+  "news-full": {
+    "label": "Новости (архив)",
+    "loading": "Загрузка...",
+    "error_load": "Не удалось загрузить новости."
   },
   "common": {
     "slogan": "Ваша надежная защита"
