--- a/public/locales/uk.json
+++ b/public/locales/uk.json
@@ -136,8 +136,12 @@
   "news": {
     "title": "Останні події",
     "all_news_btn": "Усі новини",
-    "read_more": "Читати повністю",
-    "news-full": "Новини (Архів)"
+    "read_more": "Читати повністю"
+  },
+  "news-full": {
+    "label": "Новини (архів)",
+    "loading": "Завантаження...",
+    "error_load": "Не вдалося завантажити новини."
   },
   "common": {
     "slogan": "Ваш надійний захист"
