--- a/public/locales/contacts/contacts-uk.json
+++ b/public/locales/contacts/contacts-uk.json
@@ -4,8 +4,8 @@
     "main_title": "Контакти та реквізити",
     "sidebar_title": "Контакти",
     "email_label": "Пошта",
-    "email_value": "bfbulwark@gmail.com",
-    "email_href": "mailto:bfbulwark@gmail.com",
+    "email_value": "info@bulwark-fund.org",
+    "email_href": "mailto:info@bulwark-fund.org",
     "phone_label": "Телефон / Signal",
     "phone_value": "+380 96 659 49 23",
     "phone_href": "tel:+380966594923",
