--- a/public/locales/seo-uk.json
+++ b/public/locales/seo-uk.json
@@ -63,6 +63,24 @@
       "og_site_name": "Bulwark Fund",
       "twitter_title": "Галерея Bulwark Fund",
       "twitter_description": "Історія білоруського добровольчого руху у фотографіях."
+    },
+    "news_full": {
+      "title": "Новини (архів) | Bulwark Fund | News Archive",
+      "description": "Архів новин та подій фонду Bulwark. Слідкуйте за нашою діяльністю.",
+      "og_title": "Новини (архів) | Bulwark Fund | News Archive",
+      "og_description": "Повний архів подій та діяльності фонду.",
+      "og_site_name": "Bulwark Fund",
+      "twitter_title": "Новини (архів) | Bulwark Fund | News Archive",
+      "twitter_description": "Усі новини фонду в одному місці."
+    },
+    "get_help": {
+      "title": "Отримати допомогу | Bulwark Fund | Get Help",
+      "description": "Підтримка білоруських добровольців та ветеранів в Україні: легалізація, правовий статус, реабілітація.",
+      "og_title": "Отримати допомогу | Bulwark Fund | Get Help",
+      "og_description": "Безпечний канал зв'язку для отримання підтримки добровольцями.",
+      "og_site_name": "Bulwark Fund",
+      "twitter_title": "Отримати допомогу | Bulwark Fund | Get Help",
+      "twitter_description": "Безпечний зв'язок та підтримка наших воїнів."
     }
   }
 }
