feat: unify get_help page and volunteers form localization keys
- Created a structured  block with sub-objects for titles and form fields.
- Realigned  partial keys to match the new form naming convention.
- Synchronized translations for BE, UK, EN, RU.
- Cleaned up obsolete keys in JSON files.

--- a/public/locales/be.json
+++ b/public/locales/be.json
@@ -231,18 +231,6 @@
     "confidential": "Канфідэнцыйна"
   },
 
-  "get_help": {
-    "page_title": "Атрымаць дапамогу | Bulwark",
-    "tag": "Support Service",
-    "main_title": "Дапамога добраахвотнікам",
-    "hero_text": "Мы падтрымліваем беларускіх добраахвотнікаў і ветэранаў (УСУ / НГУ) у крытычных пытаннях статусу і здароўя.",
-    "form_section_title": "Аформіць запыт",
-    "step1_title": "Бяспечная сувязь",
-    "step1_text": "Усе дадзеныя перадаюцца праз абароненыя каналы. Вы можаце выкарыстоўваць пазыўны.",
-    "step2_title": "Апрацоўка",
-    "step2_text": "Нашы юрысты ці псіхолагі звяжуцца з вамі на працягу 48 гадзін.",
-    "encrypted_label": "Абаронена скразным шыфраваннем"
-  },
   "volunteers": {
     "tag": "Дапамога",
     "title": "Дапамога добраахвотнікам",
@@ -253,16 +241,13 @@
     "crit2_text": "Кансультацыі па легалізацыі, аднаўленне дакументаў, прафесійная псіхалагічная падтрымка.",
     "crit2_text_short": "Легалізацыя, экстрадыцыя, ПТСР-дапамога, аднаўленне дакументаў.",
     "warning": "Важна: Мы не займаемся зборам на зброю ці амуніцыю. Наша задача — ваш прававы і ментальны статус.",
-    "name_label": "Імя / Пазыўны",
+    "cta": "Патрэбна дапамога? Напішыце нам",
     "name_placeholder": "Імя / Пазыўны (мін.2 сімвалы)",
-    "status_label": "Статус",
     "status_select": "Статус (абярыце са спіса)",
     "status_active": "Дзейны вайсковец",
     "status_veteran": "Ветэран",
     "status_family": "Сям'я добраахвотніка",
-    "needs_label": "Сутнасць праблемы",
     "needs_placeholder": "Якая дапамога патрэбна? (мін. 10 сімвалаў)",
-    "contact_label": "Кантакт (Signal / Telegram)",
     "contact_placeholder": "Telegram/Signal(@user) або Phone(+38..)",
     "btn_send": "Адправіць запыт"
   },
@@ -335,5 +320,36 @@
     "slogan": "Жыве Беларусь! Жыве вечна!",
     "repeat_line1": "Беларусь! Маці мая Радзіма!",
     "repeat_line2": "Клянуся вызваляць і бараніць Цябе..."
+  },
+  "get_help": {
+    "tag": "Support",
+    "main_title_part1": "Дапамога ",
+    "main_title_accent": "добраахвотнікам",
+    "hero_text": "Мы падтрымліваем беларускіх добраахвотнікаў і ветэранаў (УСУ / НГУ) у крытычных пытаннях статусу і здароўя.",
+    "warning_text": "Важна: Мы не займаемся зборам на зброю ці амуніцыю. Наша задача — ваш прававы і ментальны статус.",
+    "crit1_title": "Для каго",
+    "crit1_text": "Дзейныя вайскоўцы і ветэраны-беларусы.",
+    "crit2_title": "Напрамкі",
+    "crit2_text": "Легалізацыя, экстрадыцыя, ПТСР-дапамога, аднаўленне дакументаў.",
+    "form_title_row1": "Аформіць",
+    "form_title_row2": "запыт",
+    "step1_number": "01",
+    "step1_title": "Бяспечная сувязь",
+    "step1_text": "Усе дадзеныя перадаюцца праз абароненыя каналы. Вы можаце выкарыстоўваць пазыўны.",
+    "step2_number": "02",
+    "step2_title": "Апрацоўка",
+    "step2_text": "Нашы юрысты ці псіхолагі звяжуцца з вамі на працягу 48 гадзін.",
+    "encrypted_label": "Абаронена скразным шыфраваннем",
+    "form": {
+      "cta": "Патрэбна дапамога? Напішыце нам",
+      "name_placeholder": "Імя / Пазыўны (мін.2 сімвалы)",
+      "status_select": "Статус (абярыце са спіса)",
+      "status_active": "Дзейны вайсковец",
+      "status_veteran": "Ветэран",
+      "status_family": "Сям'я добраахвотніка",
+      "needs_placeholder": "Якая дапамога патрэбна? (мін.10 сімвалаў)",
+      "contact_placeholder": "Telegram/Signal(@user) або Phone(+38..)",
+      "btn_send": "Адправіць запыт"
+    }
   }
 }
