--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -228,40 +228,26 @@
     "urgent_link": "Urgent Contact",
     "confidential": "Confidential"
   },
-  "get_help": {
-    "page_title": "Get Help | Bulwark",
-    "tag": "Support Service",
-    "main_title": "Assistance for Fighters",
-    "hero_text": "We support Belarusian fighters and veterans (AFU / NGU) in critical matters of status and health.",
-    "form_section_title": "Submit a Request",
-    "step1_title": "Secure Communication",
-    "step1_text": "All data is transmitted via secure channels. You may use a call sign.",
-    "step2_title": "Service",
-    "step2_text": "Our lawyers or psychologists will contact you within 48 hours.",
-    "encrypted_label": "Protected by end-to-end encryption"
-  },
+
   "volunteers": {
-    "tag": "Assistance",
-    "title": "Help for Volunteers",
+    "tag": "Support",
+    "title": "Support for Volunteers",
     "crit1_title": "For whom:",
-    "crit1_text": "Only for Belarusian fighters (active-duty military and veterans) who are fighting or have fought within the AFU / NGU.",
-    "crit1_text_short": "Active-duty military and veterans from Belarus.",
+    "crit1_text": "Exclusively for Belarusian volunteers (active-duty personnel and veterans) fighting or having fought within the AFU / NGU.",
+    "crit1_text_short": "Active-duty military and Belarusian veterans.",
     "crit2_title": "What we provide:",
-    "crit2_text": "Legalization consultations, document recovery, professional psychological support.",
+    "crit2_text": "Legalization consultations, document recovery, and professional psychological support.",
     "crit2_text_short": "Legalization, extradition, PTSD support, document recovery.",
-    "warning": "Important: We do not collect funds for weapons or ammunition. Our mission is your legal and mental status.",
-    "name_label": "Name / Callsign",
-    "name_placeholder": "Name / Callsign (min. 2 chars)",
-    "status_label": "Status",
+    "warning": "Important: We do not collect funds for weapons or ammunition. Our focus is your legal and mental status.",
+    "cta": "Need help? Contact us",
+    "name_placeholder": "Name / Callsign (min. 2 characters)",
     "status_select": "Status (select from list)",
     "status_active": "Active-duty military",
     "status_veteran": "Veteran",
-    "status_family": "Family of a fighter",
-    "needs_label": "Nature of the issue",
-    "needs_placeholder": "What help do you need? (min. 10 chars)",
-    "contact_label": "Contact (Signal / Telegram)",
-    "contact_placeholder": "Telegram/Signal(@user) or Phone(+...)",
-    "btn_send": "Send request"
+    "status_family": "Volunteer's family",
+    "needs_placeholder": "What help is needed? (min. 10 characters)",
+    "contact_placeholder": "Telegram/Signal(@user) or Phone(+38..)",
+    "btn_send": "Send Request"
   },
   "support": {
     "page_title": "Support | Bulwark",
@@ -331,5 +317,36 @@
     "slogan": "Long Live Belarus! Live Forever!",
     "repeat_line1": "Belarus! My Motherland!",
     "repeat_line2": "I swear to liberate and defend You..."
+  },
+  "get_help": {
+    "tag": "Support",
+    "main_title_part1": "Support for ",
+    "main_title_accent": "volunteers",
+    "hero_text": "We support Belarusian volunteers and veterans (AFU / NGU) in critical matters of status and health.",
+    "warning_text": "Important: We do not collect funds for weapons or ammunition. Our mission is your legal and mental status.",
+    "crit1_title": "Target audience",
+    "crit1_text": "Active-duty military and Belarusian veterans.",
+    "crit2_title": "Focus areas",
+    "crit2_text": "Legalization, extradition, PTSD support, document recovery.",
+    "form_title_row1": "Submit a",
+    "form_title_row2": "request",
+    "step1_number": "01",
+    "step1_title": "Secure communication",
+    "step1_text": "All data is transmitted via protected channels. You may use a callsign.",
+    "step2_number": "02",
+    "step2_title": "Processing",
+    "step2_text": "Our lawyers or psychologists will contact you within 48 hours.",
+    "encrypted_label": "Protected by end-to-end encryption",
+    "form": {
+      "cta": "Need help? Contact us",
+      "name_placeholder": "Name / Callsign (min. 2 characters)",
+      "status_select": "Status (select from list)",
+      "status_active": "Active-duty military",
+      "status_veteran": "Veteran",
+      "status_family": "Volunteer's family",
+      "needs_placeholder": "What help is needed? (min. 10 characters)",
+      "contact_placeholder": "Telegram/Signal(@user) or Phone(+38..)",
+      "btn_send": "Send Request"
+    }
   }
 }
