--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -229,39 +229,24 @@
     "confidential": "Конфиденциально"
   },
 
-  "get_help": {
-    "page_title": "Получить помощь | Bulwark",
-    "tag": "Support Service",
-    "main_title": "Помощь добровольцам",
-    "hero_text": "Мы поддерживаем белорусских добровольцев и ветеранов (ВСУ / НГУ) в критических вопросах статуса и здоровья.",
-    "form_section_title": "Оформить запрос",
-    "step1_title": "Безопасная связь",
-    "step1_text": "Все данные передаются через защищенные каналы. Вы можете использовать позывной.",
-    "step2_title": "Обслуживание",
-    "step2_text": "Наши юристы или психологи свяжутся с вами в течение 48 часов.",
-    "encrypted_label": "Защищено сквозным шифрованием"
-  },
   "volunteers": {
     "tag": "Помощь",
     "title": "Помощь добровольцам",
     "crit1_title": "Для кого:",
     "crit1_text": "Только для белорусских добровольцев (действующих военнослужащих и ветеранов), которые воюют или воевали в составе ВСУ / НГУ.",
-    "crit1_text_short": "Действующие военные и ветераны-белорусы.",
-    "crit2_title": "Что даем:",
+    "crit1_text_short": "Действующие военнослужащие и ветераны-белорусы.",
+    "crit2_title": "Что предоставляем:",
     "crit2_text": "Консультации по легализации, восстановление документов, профессиональная психологическая поддержка.",
     "crit2_text_short": "Легализация, экстрадиция, ПТСР-помощь, восстановление документов.",
     "warning": "Важно: Мы не занимаемся сбором на оружие или амуницию. Наша задача — ваш правовой и ментальный статус.",
-    "name_label": "Имя / Позывной",
+    "cta": "Нужна помощь? Напишите нам",
     "name_placeholder": "Имя / Позывной (мин. 2 символа)",
-    "status_label": "Статус",
     "status_select": "Статус (выберите из списка)",
     "status_active": "Действующий военнослужащий",
     "status_veteran": "Ветеран",
     "status_family": "Семья добровольца",
-    "needs_label": "Суть проблемы",
     "needs_placeholder": "Какая помощь нужна? (мин. 10 символов)",
-    "contact_label": "Контакт (Signal / Telegram)",
-    "contact_placeholder": "Telegram/Signal(@user) или Phone(+...)",
+    "contact_placeholder": "Telegram/Signal(@user) или Phone(+38..)",
     "btn_send": "Отправить запрос"
   },
   "support": {
@@ -332,5 +317,36 @@
     "slogan": "Жыве Беларусь! Жыве вечна!",
     "repeat_line1": "Беларусь! Мать моя Родина!",
     "repeat_line2": "Клянусь освобождать и защищать Тебя..."
+  },
+  "get_help": {
+    "tag": "Support",
+    "main_title_part1": "Помощь ",
+    "main_title_accent": "добровольцам",
+    "hero_text": "Мы поддерживаем белорусских добровольцев и ветеранов (ВСУ / НГУ) в критических вопросах статуса и здоровья.",
+    "warning_text": "Важно: Мы не занимаемся сбором на оружие или амуницию. Наша задача — ваш правовой и ментальный статус.",
+    "crit1_title": "Для кого",
+    "crit1_text": "Действующие военнослужащие и ветераны-белорусы.",
+    "crit2_title": "Направления",
+    "crit2_text": "Легализация, экстрадиция, ПТСР-помощь, восстановление документов.",
+    "form_title_row1": "Оформить",
+    "form_title_row2": "запрос",
+    "step1_number": "01",
+    "step1_title": "Безопасная связь",
+    "step1_text": "Все данные передаются через защищенные каналы. Вы можете использовать позывной.",
+    "step2_number": "02",
+    "step2_title": "Обработка",
+    "step2_text": "Наши юристы или психологи свяжутся с вами в течение 48 часов.",
+    "encrypted_label": "Защищено сквозным шифрованием",
+    "form": {
+      "cta": "Нужна помощь? Напишите нам",
+      "name_placeholder": "Имя / Позывной (мин. 2 символа)",
+      "status_select": "Статус (выберите из списка)",
+      "status_active": "Действующий военнослужащий",
+      "status_veteran": "Ветеран",
+      "status_family": "Семья добровольца",
+      "needs_placeholder": "Какая помощь нужна? (мин. 10 символов)",
+      "contact_placeholder": "Telegram/Signal(@user) или Phone(+38..)",
+      "btn_send": "Отправить запрос"
+    }
   }
 }
