--- a/public/locales/uk.json
+++ b/public/locales/uk.json
@@ -229,40 +229,25 @@
     "confidential": "Конфіденційно"
   },
 
-  "get_help": {
-    "page_title": "Отримати допомогу | Bulwark",
-    "tag": "Support Service",
-    "main_title": "Допомога добровольцям",
-    "hero_text": "Ми підтримуємо білоруських добровольців та ветеранів (ЗСУ / НГУ) у критичних питаннях статусу та здоров'я.",
-    "form_section_title": "Оформити запит",
-    "step1_title": "Безпечний зв'язок",
-    "step1_text": "Усі дані передаються через захищені канали. Ви можете використовувати позивний.",
-    "step2_title": "Обробка",
-    "step2_text": "Наші юристи або психологи зв'яжуться з вами протягом 48 годин.",
-    "encrypted_label": "Захищено наскрізним шифруванням"
-  },
   "volunteers": {
     "tag": "Допомога",
     "title": "Допомога добровольцям",
     "crit1_title": "Для кого:",
     "crit1_text": "Тільки для білоруських добровольців (діючих військовослужбовців та ветеранів), які воюють або воювали у складі ЗСУ / НГУ.",
-    "crit1_text_short": "Діючі військові та ветерани-білоруси.",
+    "crit1_text_short": "Діючі військовослужбовці та ветерани-білоруси.",
     "crit2_title": "Що надаємо:",
     "crit2_text": "Консультації з легалізації, відновлення документів, професійна психологічна підтримка.",
     "crit2_text_short": "Легалізація, екстрадиція, ПТСР-допомога, відновлення документів.",
     "warning": "Важливо: Ми не займаємося збором на зброю чи амуніцію. Наше завдання — ваш правовий та ментальний статус.",
-    "name_label": "Ім'я / Позивний",
+    "cta": "Потрібна допомога? Напишіть нам",
     "name_placeholder": "Ім'я / Позивний (мін. 2 символи)",
-    "status_label": "Статус",
     "status_select": "Статус (оберіть зі списку)",
     "status_active": "Діючий військовослужбовець",
     "status_veteran": "Ветеран",
     "status_family": "Сім'я добровольця",
-    "needs_label": "Суть проблеми",
     "needs_placeholder": "Яка допомога потрібна? (мін. 10 символів)",
-    "contact_label": "Контакт (Signal / Telegram)",
     "contact_placeholder": "Telegram/Signal(@user) або Phone(+38..)",
-    "btn_send": "Відправити запит"
+    "btn_send": "Надіслати запит"
   },
   "support": {
     "page_title": "Допомогти | Bulwark",
@@ -332,5 +317,36 @@
     "slogan": "Живе Білорусь! Живе вічно!",
     "repeat_line1": "Білорусь! Мати моя Батьківщино!",
     "repeat_line2": "Присягаю визволяти та захищати Тебе..."
+  },
+  "get_help": {
+    "tag": "Support",
+    "main_title_part1": "Допомога ",
+    "main_title_accent": "добровольцям",
+    "hero_text": "Ми підтримуємо білоруських добровольців та ветеранів (ЗСУ / НГУ) у критичних питаннях статусу та здоров'я.",
+    "warning_text": "Важливо: Ми не займаємося збором на зброю чи амуніцію. Наше завдання — ваш правовий та ментальний статус.",
+    "crit1_title": "Для кого",
+    "crit1_text": "Діючі військовослужбовці та ветерани-білоруси.",
+    "crit2_title": "Напрямки",
+    "crit2_text": "Легалізація, екстрадиція, ПТСР-допомога, відновлення документів.",
+    "form_title_row1": "Оформити",
+    "form_title_row2": "запит",
+    "step1_number": "01",
+    "step1_title": "Безпечний зв'язок",
+    "step1_text": "Усі дані передаються через захищені канали. Ви можете використовувати позивний.",
+    "step2_number": "02",
+    "step2_title": "Обробка",
+    "step2_text": "Наші юристи чи психологи зв'яжуться з вами протягом 48 годин.",
+    "encrypted_label": "Захищено наскрізним шифруванням",
+    "form": {
+      "cta": "Потрібна допомога? Напишіть нам",
+      "name_placeholder": "Ім'я / Позивний (мін. 2 символи)",
+      "status_select": "Статус (оберіть зі списку)",
+      "status_active": "Діючий військовослужбовець",
+      "status_veteran": "Ветеран",
+      "status_family": "Сім'я добровольця",
+      "needs_placeholder": "Яка допомога потрібна? (мін. 10 символів)",
+      "contact_placeholder": "Telegram/Signal(@user) або Phone(+38..)",
+      "btn_send": "Надіслати запит"
+    }
   }
 }
