seo: add meta tags and localized SEO keys for donate page
- Implemented full <head> block for donate.html with i18next support.
- Added  keys to be, uk, en, ru.
- Set bilingual values (BY|EN) for Belarusian locale to improve search visibility.

--- a/public/locales/be.json
+++ b/public/locales/be.json
@@ -278,7 +278,7 @@
     "volunteer_text": "Дапамога з перакладамі, камунікацыяй ці арганізацыяй.",
     "cta_title": "Маеце прапанову?",
     "cta_subtext": "Мы заўсёды адкрытыя да новых ідэй. Напішыце нам або скарыстайцеся ботам.",
-    "cta_form_label": "Адпраўціць запыт праз форму",
+    "cta_form_label": "Адправіць запыт праз форму",
     "btn_submit": "Стаць партнёрам",
     "btn_donate": "Падтрымаць",
     "btn_requisites": "Глядзець рэквізіты"
